--- a/Portals/0/rich-content/durex/5052197048988.html
+++ b/Portals/0/rich-content/durex/5052197048988.html
@@ -1,19 +1,16 @@
-<!DOCTYPE html>
-<html lang="pl">
 
-<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Durex</title>
+
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@300;500;600;800&family=Encode+Sans:wght@100;500&display=swap" rel="stylesheet">
   <!-- styles -->
   <link rel="stylesheet" type="text/css" href="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/styles/style.css" />
-</head>
 
-<body>
+
+
   <div class="es-durex" id="es-durex">
     <section class="es-kv">
 
@@ -29,7 +26,7 @@
           <p class="es-kv__text">Dodatkowo nawilżane</p>
         </div>
         <div class="es-kv__packshot">
-          <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/packshot.png" alt="" class="es-kv__img es-kv__img-packshot" />
+          <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/img/packshot.png" alt="" class="es-kv__img es-kv__img-packshot" />
           <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/durex.png" alt="" class="es-kv__img es-kv__img-durex" />
         </div>
       </div>
@@ -42,25 +39,25 @@
       <div class="es-features__container">
         <div class="es-features__feature es-feature">
           <div class="es-feature__icon">
-            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/icon-1.svg" alt="" class="es-feature__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/icon-1.png" alt="" class="es-feature__img" />
           </div>
           <p class="es-feature__text"><strong class="es-feature__text--bold">rozmiar</strong> standardowy</p>
         </div>
         <div class="es-features__feature">
           <div class="es-feature__icon">
-            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/icon-2.svg" alt="" class="es-feature__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/icon-2.png" alt="" class="es-feature__img" />
           </div>
           <p class="es-feature__text"><strong class="es-feature__text--bold">dodatkowy</strong> lubrykant</p>
         </div>
         <div class="es-features__feature">
           <div class="es-feature__icon">
-            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/icon-3.svg" alt="" class="es-feature__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/icon-3.png" alt="" class="es-feature__img" />
           </div>
           <p class="es-feature__text"><strong class="es-feature__text--bold">grubość</strong> supercienkie</p>
         </div>
         <div class="es-features__feature">
           <div class="es-feature__icon">
-            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/icon-4.svg" alt="" class="es-feature__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/icon-4.png" alt="" class="es-feature__img" />
           </div>
           <p class="es-feature__text"><strong class="es-feature__text--bold">kształt</strong> easy-on</p>
         </div>
@@ -107,8 +104,12 @@
           </div>
         </div>
         <div class="es-carousel-arrows">
-          <button class="es-prev-arrow"><img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg"></button>
-          <button class="es-next-arrow"><img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg"></button>
+          <button class="es-prev-arrow">
+            <img class="es-arrow" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow-prev.png">
+          </button>
+          <button class="es-next-arrow">
+            <img class="es-arrow" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow-next.png">
+          </button>
         </div>
       </div>
     </section>
@@ -142,17 +143,7 @@
       <div class="es-tip">
         <p class="es-tip__title">Wskazówka</p>
         <p class="es-tip__text">Aby ułatwić założenie, logo Durex na folijce wskazuje spód prezerwatywy.</p>
-
-        <svg class="es-tip__arrow" id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 64.47 64.99">
-          <g id="Type">
-            <path
-              d="m32.23,0C14.43,0,0,14.55,0,32.5s14.43,32.5,32.23,32.5,32.23-14.55,32.23-32.5S50.04,0,32.23,0Zm0,57.97c-13.95,0-25.26-11.4-25.26-25.47S18.28,7.03,32.23,7.03s25.26,11.4,25.26,25.47-11.31,25.47-25.26,25.47Z"
-              style="fill: #00c5c7; stroke-width: 0px;" />
-            <polyline points="27.83 17.75 42 31.92 27.83 46.09"
-              style="fill: none; stroke: #00c5c7; stroke-linecap: round; stroke-linejoin: round; stroke-width: 6px;" />
-          </g>
-        </svg>
+        <img class="es-tip__arrow" id="Layer_2" data-name="Layer 2" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow-teal.png" alt="" />
         <div class="es-tip__container">
           <img class="es-tip__img--top" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/top.png">
           <img class="es-tip__img--bottom" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/bottom.png">
@@ -196,7 +187,8 @@
         <iframe id="YTplayer" src="https://www.youtube-nocookie.com/embed/92aWiL_wZyg?si=59LoopUym48M3CTk"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
+          allowfullscreen>
+        </iframe>
       </div>
     </section>
 
@@ -258,7 +250,7 @@
               Dlaczego warto używać produktów Durex?
             </h5>
             <button class="es-faq__arrow">
-              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow-next.png" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -287,7 +279,7 @@
               Jakim testom jakości poddawane są prezerwatywy Durex?
             </h5>
             <button class="es-faq__arrow">
-              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow-next.png" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -330,7 +322,7 @@
               Czy cieńsze prezerwatywy są bardziej narażone na pękanie?
             </h5>
             <button class="es-faq__arrow">
-              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow-next.png" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -347,7 +339,7 @@
               prysznic?
             </h5>
             <button class="es-faq__arrow">
-              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow-next.png" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -373,7 +365,7 @@
               Czy mogę używać prezerwatyw do seksu analnego?
             </h5>
             <button class="es-faq__arrow">
-              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow-next.png" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -394,7 +386,7 @@
               Czy można stosować lubrykanty wraz z prezerwatywami?
             </h5>
             <button class="es-faq__arrow">
-              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow-next.png" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -415,7 +407,7 @@
               Dlaczego należy stosować lubrykanty?
             </h5>
             <button class="es-faq__arrow">
-              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow-next.png" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -440,6 +432,10 @@
         </div>
       </div>
     </section>
+    <section class="es-footer">
+      <p class="es-footer__text">To jest wyrób medyczny. Używaj go zgodnie z instrukcją używania lub etykietą.</p>
+      <img class="es-footer__logo" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/durex-blue.png" alt=""/>
+    </section>
 
   </div>
   <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/js/scrollmagic.min.js"></script>
@@ -449,6 +445,3 @@
   <script src="https://www.youtube.com/iframe_api"></script>
   <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/js/posterVideo.js"></script>
   <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/js/faq.min.js"></script>
-</body>
-
-</html>
